--- a/src/index.html
+++ b/src/index.html
@@ -40,27 +40,12 @@
 <body>
 <div id="fb-root"></div><script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=1653802928255147&autoLogAppEvents=1"></script>
 
+
 <div class="header">
   <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
     <a href="#menu" id="menuLink" class="menu-link"><span></span></a>
-    <a href="./" class="pure-menu-heading">Ofudesaki Browser</a>
-
+    <span class="pure-menu-heading">Ofudesaki Browser</span>
     <ul class="pure-menu-list">
-      <li class="pure-menu-item">
-        <a href="#" id="verseViewMenuItem" class="btn pure-menu-link" title="Browse">
-          <i class="fas fa-eye"></i> <span>Browse</span>
-        </a>
-      </li>
-      <li class="pure-menu-item">
-        <a href="#" id="groupViewMenuItem" class="btn pure-menu-link" title="Read View">
-          <i class="fab fa-readme"></i> <span>Read</span>
-        </a>
-      </li>
-      <li class="pure-menu-item">
-        <a href="#" id="searchViewMenuItem" class="btn pure-menu-link" title="Search View">
-          <i class="fas fa-search"></i> <span>Search</span>
-        </a>
-      </li>
       <li class="pure-menu-item">
         <a href="#about" class="pure-menu-link" title="About this Project">
           <i class="fas fa-info-circle"></i>
@@ -71,53 +56,42 @@
 </div>
 
 <div id="layout" class="content-wrapper">
-  <div id="main" class="content">
-    <div id="menu" class="pad-right-1em">
-      <table class="full-width tr-control-panel">
-        <tbody>
-          <!-- Browse (verse) View Controls -->
-          <tr>
-            <td>
-              <div class="pure-g verse-view">
-                <div class="pure-u-2-5"><strong>Part:</strong></div>
-                <div class="pure-u-3-5"><select id="partSelect" class="full-width"></select></div>
+  <div id="menu" class="pad-right-1em">
+    <div class="verse-view pure-g">
+      <div class="pure-u-2-5"><strong>Part:</strong></div>
+      <div class="pure-u-3-5"><select id="partSelect" class="full-width"></select></div>
 
-                <div class="pure-u-2-5"><strong>Verse:</strong></div>
-                <div class="pure-u-3-5"><select id="verseSelect" class="full-width"></select></div>
-              </div>
-            </td>
-          </tr>
-          <tr id="verseOptionsRow" class="verse-view view-options">
-            <td>
-              <div class="verse-options verse-view pure-g full-width">
-                <div class="pure-u-1-4"><input id="showRomanizedCbx-verse" type="checkbox" /></div>
-                <div class="pure-u-3-4"><label for="showRomanizedCbx-verse">Romanized</label></div>
+      <div class="pure-u-2-5"><strong>Verse:</strong></div>
+      <div class="pure-u-3-5"><select id="verseSelect" class="full-width"></select></div>
+    </div>
+    <div id="verseOptionsRow" class="verse-view">
+      <div class="verse-options pure-g full-width">
+        <div class="pure-u-1-4"><input id="showRomanizedCbx-verse" type="checkbox" /></div>
+        <div class="pure-u-3-4"><label for="showRomanizedCbx-verse">Romanized</label></div>
 
-                <div class="pure-u-1-4"><input id="showJapaneseCbx-verse" type="checkbox" /></div>
-                <div class="pure-u-3-4"><label for="showJapaneseCbx-verse">Japanese</label></div>
+        <div class="pure-u-1-4"><input id="showJapaneseCbx-verse" type="checkbox" /></div>
+        <div class="pure-u-3-4"><label for="showJapaneseCbx-verse">Japanese</label></div>
 
-                <div class="pure-u-1-4"><input id="showEnglishCbx-verse" type="checkbox" /></div>
-                <div class="pure-u-3-4"><label for="showEnglishCbx-verse">English</label></div>
+        <div class="pure-u-1-4"><input id="showEnglishCbx-verse" type="checkbox" /></div>
+        <div class="pure-u-3-4"><label for="showEnglishCbx-verse">English</label></div>
 
-                <div class="pure-u-1-4"><input id="showKanjiCbx-verse" type="checkbox" /></div>
-                <div class="pure-u-3-4"><label for="showKanjiCbx-verse">Kanji</label></div>
-              </div>
-            </td>
-          </tr>
-          <!-- Read (group) View Controls -->
-          <tr id="groupControls">
-            <td><select id="verseGroupSelect" class="full-width group-view"></select></td>
-          </tr>
-          <tr id="groupOptionsRow" class="group-view"></tr>
-          <!-- Search View Controls -->
-          <tr id="searchControls">
-            <td><div class="search-view">Search Options</div></td>
-          </tr>
-          <tr id="searchOptionsRow" class="search-view"></tr>
-        </tbody>
-      </table>
+        <div class="pure-u-1-4"><input id="showKanjiCbx-verse" type="checkbox" /></div>
+        <div class="pure-u-3-4"><label for="showKanjiCbx-verse">Kanji</label></div>
+      </div>
     </div>
 
+    <!-- Read (group) View Controls -->
+    <div class="group-view">
+      <select id="verseGroupSelect" class="full-width"></select>
+    </div>
+    <div id="groupOptionsRow" class="group-view"></div>
+
+    <!-- Search View Controls -->
+    <div class="search-view">Search Options</div>
+    <div id="searchOptionsRow" class="search-view"></div>
+  </div>
+
+  <div id="main" class="content">
     <div id="verseNavTop" class="pure-g">
       <div class="pure-u-1-3">
         <a class="verse-nav-prev-btn" href="#"><i class="fas fa-arrow-left"></i> Prev</a>
@@ -134,9 +108,18 @@
       <div id="verseDisplay" class="full-width"></div>
     </div>
 
-    <div id="groupView" class="full-width">Verse Group View</div>
+    <div id="groupView" class="full-width"></div>
 
-    <div id="searchView" class="pure-g">
+    <div id="searchView">
+      <div class="search-view">
+        <table class="full-width"><tbody>
+          <tr>
+            <td class="full-width"><input id="searchTxt" type="search" placeholder="Search..." class="full-width search-text"/></td>
+            <td><button id="searchBtn"><i class="fas fa-search"></i></button></td>
+            <td><button id="searchClearBtn">&#10006;</button></td>
+          </tr>
+        </tbody></table>
+      </div>
       <div id="searchResults" class="pure-u-1"></div>
     </div>
   </div>
@@ -145,14 +128,16 @@
 <!-- modal -->
 <div id="about" class="modal-window">
   <div>
-    <a href="#" title="Close" class="modal-close">&#10006;</a>
     <h3>What?</h3>
     <p>
       The <strong>Ofudesaki Browser</strong> is an application that allows people to study the
       <a href="http://en.tenrikyo-resource.com/wiki/Ofudesaki">Ofudesaki &#x304A;&#x3075;&#x3067;&#x3055;&#x304D;</a>
-      (<i>The Tip of the Writing Brush</i>), using the "Browse" feature (allows users to view verses one at a time), 
-      "Read" feature (allows uses to view the standard verse groups), and 
-      "Search" feature (allows users to search perform a text search over the English transation, Romanized, Japanese, and Kanji verses).
+      (<i>The Tip of the Writing Brush</i>), using the 
+      <ul>
+        <li>"Browse" feature (allows users to view verses one at a time), </li>
+        <li>"Read" feature (allows uses to view the standard verse groups), and</li>
+        <li>"Search" feature (allows users to search perform a text search over the English transation, Romanized, Japanese, and Kanji verses).</li>
+      </ul>
     </p>
 
     <div class="fb-share-button" data-href="http://lewdev.github.io/ofudesaki-browser/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flewdev.github.io%2Fofudesaki-browser%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
@@ -195,17 +180,20 @@
       <a href="https://codepen.io/timothylong/pen/HhAer/">CSS only Modal</a>
     </p>
   </div>
+  <a href="#" title="Close" class="modal-close">&#10006;</a>
 </div>
 
 <div class="footer">
-  <div class="pure-g search-view">
-    <table class="full-width"><tbody>
-      <tr><td><input id="searchTxt" type="text" placeholder="Search..." class="full-width search-text"/></td>
-      <td style="width:37px;"><button id="searchBtn"><i class="fas fa-search"></i></button></td></tr>
-    </tbody></table>
+  <div class="of-bottom-menu">
+    <ul>
+      <li><a href="#" id="verseViewMenuItem" title="Browse"><i class="fas fa-eye"></i> <span>Browse</span></a></li>
+      <li><a href="#" id="groupViewMenuItem" title="Read View"><i class="fab fa-readme"></i> <span>Read</span></a></li>
+      <li><a href="#" id="searchViewMenuItem" title="Search View"><i class="fas fa-search"></i> <span>Search</span></a></li>
+      <li><a href="analysis.html" title="Analysis"><i class="fas fa-list-alt"></i> <span>Analysis</span></a></li>
+    </ul>
   </div>
-
   <div id="verseNavBottom" class="verse-nav-footer pure-g"></div>
+
 </div>
 
 <script src="script.js"></script>
