--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,9 @@
         <div class="pure-u-1-4"><input id="showEnglishCbx-verse" type="checkbox" /></div>
         <div class="pure-u-3-4"><label for="showEnglishCbx-verse">English</label></div>
 
+        <div class="pure-u-1-4"><input id="showPortugueseCbx-verse" type="checkbox" /></div>
+        <div class="pure-u-3-4"><label for="showPortugueseCbx-verse">Portuguese</label></div>
+
         <div class="pure-u-1-4"><input id="showKanjiCbx-verse" type="checkbox" /></div>
         <div class="pure-u-3-4"><label for="showKanjiCbx-verse">Kanji</label></div>
       </div>
@@ -132,7 +135,7 @@
     <p>
       The <strong>Ofudesaki Browser</strong> is an application that allows people to study the
       <a href="http://en.tenrikyo-resource.com/wiki/Ofudesaki">Ofudesaki &#x304A;&#x3075;&#x3067;&#x3055;&#x304D;</a>
-      (<i>The Tip of the Writing Brush</i>), using the 
+      (<i>The Tip of the Writing Brush</i>), using the
       <ul>
         <li>"Browse" feature (allows users to view verses one at a time), </li>
         <li>"Read" feature (allows uses to view the standard verse groups), and</li>
@@ -143,7 +146,7 @@
     <div class="fb-share-button" data-href="http://lewdev.github.io/ofudesaki-browser/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flewdev.github.io%2Fofudesaki-browser%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
 
     <h3>Why?</h3>
-    <p>Access to the Ofudesaki is limited, you need to own a copy of the Ofudesaki book and the "Kanji" version 
+    <p>Access to the Ofudesaki is limited, you need to own a copy of the Ofudesaki book and the "Kanji" version
     is not available. Also, with the "Search" tool, that wasn't available until now, anyone can look up
     a verse based on keywords that they had in mind.</p>
 
