--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
 </div>
 
 <div id="layout" class="content-wrapper">
-  <div id="menu" class="pad-right-1em" style="padding-top: 1em;">
-    <div style="height:3em;" class="verse-view pure-g">
+  <div id="menu">
+    <div style="height:3em;" class="verse-view pure-g pad-left-1em">
       <div class="pure-u-2-5"><strong>Part:</strong></div>
       <div class="pure-u-3-5"><select id="partSelect"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option></select></div>
     </div>
@@ -56,7 +56,7 @@
       <div class="pure-u-2-5"><strong>Verse:</strong></div>
       <div class="pure-u-3-5"><select id="verseSelect" class=""><option value="1" selected="selected">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option><option value="19">19</option><option value="20">20</option><option value="21">21</option><option value="22">22</option><option value="23">23</option><option value="24">24</option><option value="25">25</option><option value="26">26</option><option value="27">27</option><option value="28">28</option><option value="29">29</option><option value="30">30</option><option value="31">31</option><option value="32">32</option><option value="33">33</option><option value="34">34</option><option value="35">35</option><option value="36">36</option><option value="37">37</option><option value="38">38</option><option value="39">39</option><option value="40">40</option><option value="41">41</option><option value="42">42</option><option value="43">43</option><option value="44">44</option><option value="45">45</option><option value="46">46</option><option value="47">47</option><option value="48">48</option><option value="49">49</option><option value="50">50</option><option value="51">51</option><option value="52">52</option><option value="53">53</option><option value="54">54</option><option value="55">55</option><option value="56">56</option><option value="57">57</option><option value="58">58</option><option value="59">59</option><option value="60">60</option><option value="61">61</option><option value="62">62</option><option value="63">63</option><option value="64">64</option><option value="65">65</option><option value="66">66</option><option value="67">67</option><option value="68">68</option><option value="69">69</option><option value="70">70</option><option value="71">71</option><option value="72">72</option><option value="73">73</option><option value="74">74</option></select></div>
     </div>
-    <div id="verseOptionsRow" class="verse-view">
+    <div id="verseOptionsRow" class="verse-view options-panel">
       <div class="verse-options pure-g full-width">
         <div class="pure-u-1-4"><input id="showRomanizedCbx-verse" type="checkbox" /></div>
         <div class="pure-u-3-4"><label for="showRomanizedCbx-verse">Romanized</label></div>
@@ -79,16 +79,16 @@
     <div class="group-view" style="text-align:center;">
       <select id="verseGroupSelect" style="width:80px"></select>
     </div>
-    <div id="groupOptionsRow" class="group-view"></div>
+    <div id="groupOptionsRow" class="group-view options-panel"></div>
 
     <!-- Search View Controls -->
     <div class="search-view" style="margin-left: 1rem;">Search Options</div>
-    <div id="searchOptionsRow" class="search-view"></div>
+    <div id="searchOptionsRow" class="search-view options-panel"></div>
 
     <div class="favorites-view" style="margin-left: 1rem;">Favorites Options</div>
-    <div id="favoritesOptionsRow" class="favorites-view"></div>
+    <div id="favoritesOptionsRow" class="favorites-view options-panel"></div>
 
-    <div id="config">
+    <div id="config" class="options-panel">
       <div>Configuration</div>
       <div class="pure-g full-width">
         <div class="pure-u-1-4"><input id="hideButtonLabelCbx" type="checkbox" /></div>
