--- a/src/index.html
+++ b/src/index.html
@@ -2,25 +2,34 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+  <meta name="version" content="20200823_1903"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
-  <title>Ofudesaki Browser</title>
+  <title>Ofudesaki Browser &#x304A;&#x3075;&#x3067;&#x3055;&#x304D;</title>
+
+  <meta name="author" content="Lewis Nakao">
+  <meta name="description" content="An application that allows people to study the Ofudesaki おふでさき (The Tip of the Writing Brush)">
+
+  <link rel="canonical" href="https://lewdev.github.io/ofudesaki-browser/" />
+  <link rel="preload" href="styles.css" as="style">
+  <link rel="preload" href="webfonts/fa-brands-400.woff2" as="font">
+  <link rel="preload" href="webfonts/fa-solid-900.woff2" as="font">
 
   <!-- Open Graph tags -->
   <meta property="og:image" content="https://lewdev.github.io/ofudesaki-browser/img/ofudesaki-browser.png">
   <meta property="og:image:height" content="200">
   <meta property="og:image:width" content="200">
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Ofudesaki Browser">
-  <meta property="og:description"
-  content="An application that allows people to study the Ofudesaki &#x304A;&#x3075;&#x3067;&#x3055;&#x304D; (The Tip of the Writing Brush).">
+  <meta property="og:title" content="📕 Ofudesaki Browser">
+  <meta property="og:description" content="An application that allows people to study the Ofudesaki おふでさき (The Tip of the Writing Brush).">
   <meta property="og:url" content="https://lewdev.github.io/ofudesaki-browser/">
 
-  <!-- Icon Info  -->
+  <!-- Icons  -->
+  <link rel="apple-touch-icon" sizes="200x200" href="img/ofudesaki-browser.png">
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="200x200" href="img/ofudesaki-browser.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="manifest" href="img/site.webmanifest">
   <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#2d3e50">
   <meta name="theme-color" content="#6FBEF3">
@@ -31,8 +40,23 @@
   <link rel="stylesheet" href="css/pure-min.css">
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Offline -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Ofudesaki Browser">
+  <meta name="apple-mobile-web-app-title" content="Ofudesaki Browser">
+  <meta name="theme-color" content="#6FBEF3">
+  <meta name="msapplication-navbutton-color" content="#6FBEF3">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="msapplication-starturl" content="/index.html">
 </head>
 <body>
+  <main>
+    <section id="installBanner" class="banner">
+      <button id="installBtn" class="nav-btn" title="Install for offline access." aria-label="Install for offline access.">Install app</button>
+    </section>
 <div class="header">
   <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
     <a href="#menu" id="menuLink" class="menu-link"><span></span></a>
@@ -101,36 +125,36 @@
   <div id="main" class="content">
     <div id="verseNavTop" class="pure-g">
       <div class="pure-u-1-3">
-        <a class="verse-nav-prev-btn" href="#"><i class="fas fa-arrow-left"></i> Prev</a>
+        <button class="verse-nav-prev-btn nav-btn" aria-label="Navigate to previous verse."><i class="fas fa-arrow-left"></i> Prev</button>
       </div>
       <div class="pure-u-1-3 align-center">
         <span class="verse-nav-middle"></span>
       </div>
       <div class="pure-u-1-3 align-right">
-        <a class="verse-nav-next-btn" href="#">Next <i class="fas fa-arrow-right"></i></a>
+        <button class="verse-nav-next-btn nav-btn" aria-label="Navigate to next verse.">Next <i class="fas fa-arrow-right"></i></button>
       </div>
     </div>
 
-    <div id="verseView" class="full-width">
+    <div id="verseView" class="full-width" style="display:none">
       <div id="verseDisplay" class="full-width"></div>
     </div>
 
-    <div id="groupView" class="full-width"></div>
+    <div id="groupView" class="full-width" style="display:none"></div>
 
-    <div id="searchView" class="full-width">
+    <div id="searchView" class="full-width" style="display:none">
       <div class="search-view">
         <table class="full-width pure-form"><tbody>
           <tr>
             <td class="full-width"><input id="searchTxt" type="search" placeholder="Search..." class="full-width search-text"/></td>
-            <td><button id="searchBtn" class="pure-button pure-button-secondary"><i class="fas fa-search"></i></button></td>
-            <td><button id="searchClearBtn" class="pure-button pure-button-secondary">&#10006;</button></td>
+            <td><button id="searchBtn" class="pure-button pure-button-secondary" aria-label="Search verses."><i class="fas fa-search"></i></button></td>
+            <td><button id="searchClearBtn" class="pure-button pure-button-secondary" aria-label="Clear search input.">&#10006;</button></td>
           </tr>
         </tbody></table>
       </div>
       <div id="searchResults" class="pure-u-1"></div>
     </div>
 
-    <div id="favoritesView" class="full-width">
+    <div id="favoritesView" class="full-width" style="display:none">
       <div id="bookmarkDisplay" class="full-width"></div>
       <div id="favoritesDisplay" class="full-width"></div>
     </div>
@@ -176,6 +200,7 @@
     </ul>
   </div>
 </div>
+</main>
 
 <script src="script.js"></script>
 <script>
@@ -186,5 +211,30 @@ if ('serviceWorker' in navigator) {
       .catch(err => console.log('😥 Service worker registration failed!', err));
   });
 }
+let deferredPrompt;
+window.addEventListener('beforeinstallprompt', event => {
+  // Prevent Chrome 67 and earlier from automatically showing the prompt
+  event.preventDefault();
+  // Stash the event so it can be triggered later.
+  deferredPrompt = event;
+  // Attach the install prompt to a user gesture
+  document.querySelector('#installBtn').addEventListener('click', event => {
+    // Show the prompt
+    deferredPrompt.prompt();
+    // Wait for the user to respond to the prompt
+    deferredPrompt.userChoice
+      .then((choiceResult) => {
+        if (choiceResult.outcome === 'accepted') {
+          console.log('User accepted the A2HS prompt');
+        } else {
+          console.log('User dismissed the A2HS prompt');
+        }
+        deferredPrompt = null;
+      });
+  });
+  // Update UI notify the user they can add to home screen
+  document.querySelector('#installBanner').style.display = 'flex';
+});
+
 </script>
 </body></html>
