Offline access enabled. Install app works.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="An application that allows people to study the Ofudesaki おふでさき (The Tip of the Writing Brush)">
 
   <link rel="canonical" href="https://lewdev.github.io/ofudesaki-browser/" />
-  <link rel="preload" href="styles.css" as="style">
+  <link rel="preload" href="style.css" as="style">
   <link rel="preload" href="webfonts/fa-brands-400.woff2" as="font">
   <link rel="preload" href="webfonts/fa-solid-900.woff2" as="font">
 
